feat: update implementation TraversalExecutor
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>